--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -101,7 +101,7 @@
     </div>
 
     <!-- Collapsible Content -->
-    <h3 class="light-blue-text text-darken-4 center-align">Manage Users</h3>
+    <h3 class="light-blue-text text-darken-4 center-align">User Administration</h3>
     <div class="row">
         <div class="col s12">
             <ul class="collapsible collapsible-search light-blue-text text-darken-4">
