--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,10 @@
             <a href="#" class="nav-title">Pimp My Quiz!</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#">Home</a></li>
+                <li><a href="{{ url_for('home') }}">Home</a></li>
                 {% if session.user %}
                     <li><a href="#">Profile</a></li>
-                    <li><a href="#">New Quiz</a></li>
+                    <li><a href="{{ url_for('new_quiz') }}">New Quiz</a></li>
                     {% if session.user_role == "global admin" %}
                         <ul id="nav-admin-dropdown" class="dropdown-content">
                             <li><a href="{{ url_for('admin_users') }}">Users</a></li>
@@ -47,10 +47,10 @@
         <!-- mobile sidenav -->
         <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-blue-text text-darken-4">Pimp My Quiz!</h4></li>
-            <li><a href="#">Home</a></li>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
             {% if session.user %}
                 <li><a href="#">Profile</a></li>
-                <li><a href="#">New Quiz</a></li>
+                <li><a href="{{ url_for('new_quiz') }}">New Quiz</a></li>
                 {% if session.user_role|lower == "global admin"|lower %}
                     <ul id="sidenav-admin-dropdown" class="dropdown-content">
                         <li><a href="{{ url_for('admin_users') }}">Users</a></li>
