--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -1,4 +1,94 @@
 {% extends "base.html" %}
 {% block content %}
     <h3 class="light-blue-text text-darken-4 center-align">Create a Quiz</h3>
+    <div class="row">
+        <div id="createQuiz" class="col s12">
+                <div class="row">
+                <!-- Quiz Category -->
+                    <div class="input-field col s12 m4 select-container">
+                        <i id="quizCategoryIcon" class="prefix light-blue-text text-darken-4 fas"></i>
+                        <select id="quizCategory" name="quizCategory">
+                            {% for quiz_category in quiz_categories %}
+                            <optgroup label='<div class="subopt"><i class="fas {{ quiz_category.category_icon["class"] }} fa-fw light-blue-text text-darken-4"></i> <span class="light-blue-text text-darken-4">{{ quiz_category.category }}</span></div>'>
+                                <option>{{ quiz_category.category }}</option>
+                            </optgroup>
+                            {% endfor %}
+                        </select>
+                        <label>Quiz Category</label>
+                    </div>
+                <!-- Quiz Name -->
+                    <div class="input-field col s12 m6">
+                        <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" value="" required>
+                        <label for="quizTitle" data-error="Invalid Quiz Title" data-default="Quiz Title">Quiz Title</label>
+                    </div>
+                <!-- Public Quiz? -->
+                    <div class="input-field col s12 m2 checkbox-container">
+                        <label id="quizPublic">
+                            <input id="quizPublicInput" name="locked" type="checkbox"/>
+                            <span>Public?</span>
+                        </label>
+                    </div>
+                </div>
+                <div class="row">
+                <!-- Round Category -->
+                    <div class="input-field col s12 m4 select-container">
+                        <i id="roundCategoryIcon" class="prefix light-blue-text text-darken-4 fas"></i>
+                        <select id="roundCategory" name="roundCategory">
+                            {% for quiz_category in quiz_categories %}
+                            <optgroup label='<div class="subopt"><i class="fas {{ quiz_category.category_icon["class"] }} fa-fw light-blue-text text-darken-4"></i> <span class="light-blue-text text-darken-4">{{ quiz_category.category }}</span></div>'>
+                                <option>{{ quiz_category.category }}</option>
+                            </optgroup>
+                            {% endfor %}
+                        </select>
+                        <label>Round Category</label>
+                    </div>
+                <!-- Round Name -->
+                    <div class="input-field col s12 m6">
+                        <input id="roundTitle" name="round_title" type="text" minlength="5" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" value="" required>
+                        <label for="roundTitle" data-error="Invalid Round Title" data-default="Round Title">Round Title</label>
+                    </div>
+                <!-- Public Round? -->
+                    <div class="input-field col s12 m2 checkbox-container">
+                        <label id="roundPublic">
+                            <input id="roundPublicInput" name="locked" type="checkbox"/>
+                            <span>Public?</span>
+                        </label>
+                    </div>
+                </div>
+                <!-- Question One -->
+                <div class="row">
+                    <div class="input-field col s12 m10">
+                        <i class="prefix light-blue-text text-darken-4"></i>
+                        <input name="question_1" type="text" minlength="5" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" value="" required>
+                        <label for="question_1" data-error="Invalid Question" data-default="Question 1">Question 1</label>
+                    </div>
+                <!-- Multiple Choice? -->
+                    <div class="input-field col s12 m2 checkbox-container">
+                        <label id="quizMulti">
+                            <input id="quizMultiInput" name="quizMulti" type="checkbox"/>
+                            <span>Multiple Choice?</span>
+                        </label>
+                    </div>
+                <!-- Answer -->
+                    <div class="input-field col s12 m10">
+                        <i class="prefix light-blue-text text-darken-4"></i>
+                        <input name="answer_1" type="text" minlength="5" maxlength="25" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" value="" required>
+                        <label for="answer_1" data-error="Invalid Answer" data-default="Answer 1">Answer 1</label>
+                    </div>
+                </div>
+                <!-- create quiz -->
+                <div class="row">
+                    <button id="submitButton" type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
+                        Create Quiz <i class="fas fa-exclamation"></i>
+                    </button>
+                </div>
+        </div>
+    </div>
 {% endblock%}
+{% block scripts %}
+    <script src="{{ url_for('static', filename='js/newquiz.js') }}"></script>
+    <script>
+        // Convert mongoDB data to JS global array for use in this template
+        let categoryList = createCategoryArray({{ quiz_categories | tojson }});
+    </script>
+{% endblock %}
