--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h3 class="light-blue-text text-darken-4 center-align">Create a Quiz</h3>
     <div id="createQuiz" class="container">
-        <form id="createQuizForm">
+        <form id="createQuizForm" method="post">
             <div class="card">
                 <div class="card-content">
                     <div class="row">
