--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -29,6 +29,7 @@
                     </div>
                     <div class="row">
                         <span class="card-title col s12">Create Rounds for this Quiz</span>
+                        <input id="roundCount" name="roundCount" type="text" class="hidden" value="1">
                     </div>
                     <div class="row">
                         <ul class="collapsible expandable">
@@ -66,6 +67,7 @@
                                             <label for="roundTitle_1" data-error="Invalid Round Title" data-default="Round Title">Round Title</label>
                                         </div>
                                         <span class="title col s12">Create Questions for this Round</span>
+                                        <input id="questionCount_1" name="questionCount_1" type="text" class="hidden" value="1">
                                     </div>
                                     <div class="row">
                                         <div class="col s12">
