Added hidden #multiCount input

--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -96,12 +96,13 @@
                                                             <div class="input-field col s12 checkbox-container">
                                                                 <i class="prefix light-blue-text text-darken-4"></i>
                                                                 <label id="quizMulti_1_1">
-                                                                    <input id="quizMultiInput_1_1" class="quizMulti" name="quizMulti-1" type="checkbox"/>
+                                                                    <input id="quizMultiInput_1_1" class="quizMulti" name="quizMulti_1_1" type="checkbox"/>
                                                                     <span>Multiple Choice?</span>
                                                                 </label>
                                                             </div>
                                                             <!-- Answer -->
                                                             <div class="title col s12"><span class="col s12">What is the Answer?</span></div>
+                                                            <input id="multiCount_1_1" name="multiCount_1_1" type="text" class="hidden" value="1">
                                                             <div class="answers-container col s12">
                                                                 <div class="input-field col s12">
                                                                     <span class="prefix" data-question="1" data-multi="0"></span>
