--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -3,6 +3,10 @@
     <h3 class="light-blue-text text-darken-4 center-align">Create a Quiz</h3>
     <div id="createQuiz" class="container">
         <form id="createQuizForm" method="post">
+            <!-- Prevent Submission of Form on Enter Keypress -->
+            <!-- https://stackoverflow.com/questions/895171/prevent-users-from-submitting-a-form-by-hitting-enter/51507806#51507806 -->
+            <button class="hidden" type="submit" disabled></button>
+            <!-- Form Content -->
             <div class="card">
                 <div class="card-content">
                     <div class="row">
@@ -91,6 +95,14 @@
                                                                 <input id="question_1_1" name="question_1_1" type="text" minlength="5" maxlength="25" class="validate" value="" required>
                                                                 <label for="question_1_1" data-error="Invalid Question" data-default="Question 1">Question 1</label>
                                                             </div>
+                                                            <!-- Optional Image URL -->
+                                                            <div class="input-field col s12">
+                                                                <span class="prefix light-blue-text text-darken-4 center-align"></span>
+                                                                <input id="q_img_1_1" name="q_img_1_1" type="url" class="img-url validate" value="">
+                                                                <label for="q_img_1_1" data-error="Invalid URL" data-default="Optional Image URL">Optional Image URL</label>
+                                                            </div>
+                                                            <div class="image-preview col s12 center-align">
+                                                            </div>
                                                             <!-- Multiple Choice? -->
                                                             <span class="title col s12">Is this a multiple choice Question?</span>
                                                             <div class="input-field col s12 checkbox-container">
@@ -108,6 +120,14 @@
                                                                     <span class="prefix" data-question="1" data-multi="0"></span>
                                                                     <input id="answer_1_1" name="answer_1_1" type="text" minlength="5" maxlength="25" class="validate" value="" required>
                                                                     <label for="answer_1_1" data-error="Invalid Answer" data-default="Answer 1">Answer 1</label>
+                                                                </div>
+                                                                <!-- Optional Image URL -->
+                                                                <div class="input-field col s12">
+                                                                    <span class="prefix light-blue-text text-darken-4 center-align"></span>
+                                                                    <input id="a_img_1_1" name="a_img_1_1" type="url" class="img-url validate" value="">
+                                                                    <label for="a_img_1_1" data-error="Invalid URL" data-default="Optional Image URL">Optional Image URL</label>
+                                                                </div>
+                                                                <div class="image-preview col s12 center-align">
                                                                 </div>
                                                             </div>
                                                         </div>
