--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>testing</h1>
+    <h3 class="light-blue-text text-darken-4 center-align">Create a Quiz</h3>
+    <div id="quizCollection" class="container">
+        <ul class="collection">
+            {% for quiz in quizzes %}
+            <li class="collection-item avatar light-blue-text text-darken-4">
+                <h4>
+                    <i class="fas {{ quiz.category_icon['class'] }} fa-fw"></i>
+                    <span>{{ quiz.title }}</span>
+                </h4>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock%}
