--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
-    <h3 class="light-blue-text text-darken-4 center-align">Create a Quiz</h3>
+    <h3 class="light-blue-text text-darken-4 center-align">My Quizzes</h3>
     <div id="quizCollection" class="container">
-        <ul class="collection">
-            {% for quiz in quizzes %}
-            <li class="collection-item avatar light-blue-text text-darken-4">
-                <h4>
-                    <i class="fas {{ quiz.category_icon['class'] }} fa-fw"></i>
-                    <span>{{ quiz.title }}</span>
-                </h4>
-            </li>
-            {% endfor %}
-        </ul>
+        <div class="results-control hidden">
+            <a href="#" class="results-control-first">First</a>
+            <a href="#" class="results-control-prev">Prev</a>
+            <input class="pageNumber browser-default" name="pageNumber" type="text" minlength="1" maxlength="4" pattern="^[0-9]{1,4}$" value="1">
+            <span>of</span>
+            <span class="totalPages"></span>
+            <a href="#" class="results-control-next">Next</a>
+            <a href="#" class="results-control-last">Last</a>
+        </div>
+        <div id="quizSearchResults" class="results-data">
+            <!--returned records go here-->
+        </div>
     </div>
 {% endblock%}
+
+{% block scripts %}
+    <script src="{{ url_for('static', filename='js/quizlist.js') }}"></script>
+{% endblock %}
