Added styling for quiz search, collection elems

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -354,3 +354,15 @@ form .user-search .search-radio-row {
     margin-bottom: 1rem;
     padding-left: 3.75rem;
 }
+
+.quiz-search .row .input-field {
+    margin-bottom: 0;
+}
+
+#quizCollection {
+    margin-top: 0.5rem !important;
+}
+
+#quizSearchResults .collection-item.avatar {
+    min-height: initial;
+}
