--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,23 @@
                 <label class="truncate" for="quizSearch" data-error="Please Enter at least 2 Characters." data-default="Quiz Search">Quiz Search</label>
             </div>
         </div>
+        <div class="row">
+            <!-- quiz category selection -->
+            <div class="input-field col s12 select-container">
+                <i id="quizCategoryIcon" class="prefix light-blue-text text-darken-4 fas"></i>
+                <select id="quizCategory" name="quizCategory">
+                    <optgroup label='<div class="subopt"><i class="fas fa-fw light-blue-text text-darken-4"></i> <span class="light-blue-text text-darken-4">All</span></div>'>
+                        <option>All</option>
+                    </optgroup>
+                    {% for category in categories %}
+                    <optgroup label='<div class="subopt"><i class="fas {{ category.category_icon["class"] }} fa-fw light-blue-text text-darken-4"></i> <span class="light-blue-text text-darken-4">{{ category.category }}</span></div>'>
+                        <option>{{ category.category }}</option>
+                    </optgroup>
+                    {% endfor %}
+                </select>
+                <label>Category Filter</label>
+            </div>
+        </div>
         <!-- search button -->
         <div class="row search-action-container">
             <button id="searchButton" type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
@@ -35,4 +52,8 @@
 
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/quizlist.js') }}"></script>
+    <script>
+        // Convert mongoDB data to JS global array for use in this template
+        let categoryList = createCategoryArray({{ categories | tojson }});
+    </script>
 {% endblock %}
